--- a/templates/game.html
+++ b/templates/game.html
@@ -1,62 +1,65 @@
 {% include "header.html" %}
 <table style="border-width: 2px; border-style: solid;">
- <tr>
-{% for v in venues %}
- <tr>
-  <td colspan="4">Venue{{ v.venue_name }}</td>
- </tr>
- {% for g in v.game_set %}
- <tr>
-  <td><a href="/admin/game?edit_key={{g.key}}">edit</a></td>
-  <td><a href="/admin/game?edit_key={{g.key}}&delete=Y">delete</a></td>
-  <td>{{ g.play_date }}</td>
-  <td>{{ g.start_time }}</td>
- </tr>
- {% empty %}
- <tr>
-  <td colspan="4">No games for this venue</td>
- </tr>
- {% endfor %}
-{% endfor %}
+  <tr>
+    {% for v in venues %}
+  <tr>
+    <td colspan="5">Venue {{ v.venue_name }}</td>
+  </tr>
+  {% for g in v.game_set %}
+  <tr>
+    <td>&nbsp;</td>
+    <td><a href="/admin/game?edit_key={{g.key}}">edit</a></td>
+    <td><a href="/admin/game?edit_key={{g.key}}&delete=Y">delete</a></td>
+    <td>{{ g.play_date }}</td>
+    <td>{{ g.start_time }}</td>
+  </tr>
+  {% empty %}
+  <tr>
+    <td>&nbsp;</td>
+    <td colspan="4">No games for this venue</td>
+  </tr>
+  {% endfor %}
+  {% endfor %}
 </table>
 <form method="post">
-<table>
-  <tr><th colspan="2" style="text-align: left;">Add a Game</th></tr>
-  <tr>
-    <td style="text-align: right;">Venue</td>
-    {% if edit_key %}
-    <td><input name="vname_show" type="text" size="40" maxlength="512" 
-	       value="{{ edit_venue.venue_name|default:''}}" disabled="true" />
+  <table>
+    <tr><th colspan="2" style="text-align: left;">Add a Game</th></tr>
+    <tr>
+      <td style="text-align: right;">Venue</td>
+      {% if edit_key %}
+      <td><input name="vname_show" type="text" size="40" maxlength="512" 
+		 value="{{ edit_venue.venue_name|default:''}}" disabled="true" />
         <input type="hidden" name="vname" value="{{edit_venue.venue_name}}" />
-    </td>
-    {% else %}
-    <td>
-      <select name="vname" size="1">
-	<option value="" selected="selected">None</option>
-	{% for v in venues %}
-	<option value="{{v.key}}">{{v.venue_name}}</option>
-	{% endfor %}
-      </select>
-    </td>
-    {% endif %}
-  </tr>
-  <tr>
-    <td style="text-align: right;">Play Date</td>
-    <td><div><p><input name="play-date" type="text" size="40" maxlength="10"
-	       value="{{ edit_venue.venue_address|default:''}}" id="playdate"
-	       /></p></div></td>
-  </tr>
-  <script>
-    $(function() {
-    $( "#playdate" ).datepicker();
-    });
-  </script>
-  <tr>
-    <td style="text-align: right;">Start Time (HH24:MM)</td>
-    <td><input name="start-time" type="text" size="40" maxlength="256"
-	       value="{{ edit_venue.venue_contact_email|default:''}}"
-	       /></td>
-  </tr>
-  <tr><td colspan="2" style="text-align: right;"><input type="submit" value="Save Game" /></td></tr>
-</table>
+      </td>
+      {% else %}
+      <td>
+	<select name="vkey" size="1">
+	  <option value="" selected="selected">None</option>
+	  {% for v in venues %}
+	  <option value="{{v.key}}">{{v.venue_name}}</option>
+	  {% endfor %}
+	</select>
+      </td>
+      {% endif %}
+    </tr>
+    <tr>
+      <td style="text-align: right;">Play Date</td>
+      <td><div><p><input name="play-date" type="text" size="40" maxlength="10"
+			 value="{{ edit_venue.venue_address|default:''}}" id="playdate"
+			 /></p></div></td>
+    </tr>
+    <script>
+      $(function() {
+      $( "#playdate" ).datepicker();
+      });
+    </script>
+    <tr>
+      <td style="text-align: right;">Start Time (HH24:MM)</td>
+      <td><input name="start-time" type="text" size="40" maxlength="256"
+		 value="{{ edit_venue.venue_contact_email|default:''}}"
+		 /></td>
+    </tr>
+    <tr><td colspan="2" style="text-align: right;"><input type="submit" value="Save Game" /></td></tr>
+  </table>
+</form>
 {% include "footer.html" %}
