--- a/templates/venue.html
+++ b/templates/venue.html
@@ -2,6 +2,7 @@
 <table style="border-width: 2px; border-style: solid;">
   <tr>
     <td>&nbsp;</td>
+    <td>&nbsp;</td>
     <td>Venue Name</td>
     <td>Venue Address</td>
     <td>Contact Email</td>
@@ -11,6 +12,7 @@
   {% if v.key != edit_key  %}
   <tr>
     <td><a href="/admin/venue?edit={{ v.key }}">Edit</a></td>
+    <td><a href="/admin/delete?edit={{ v.key }}">Delete</a></td>
     <td>{{ v.venue_name }}</td>
     <td>{{ v.venue_address }}</td>
     <td>{{ v.venue_contact_email }}</td>
