--- a/templates/header.html
+++ b/templates/header.html
@@ -2,6 +2,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css' />
     <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-darkness/jquery-ui.css" rel="stylesheet" />
+    <link type="text/css" href="/js/jquery.dataTables.js" rel="stylesheet" />
     <style>
       body {
       font-family: 'VT323', fixed;
