--- a/templates/game.html
+++ b/templates/game.html
@@ -8,6 +8,7 @@
   {% for g in v.game_set %}
   <tr>
     <td>&nbsp;</td>
+    <td><a href="/admin/play?game={{g.key}}">see game</a></td>
     <td><a href="/admin/game?edit_key={{g.key}}">edit</a></td>
     <td><a href="/admin/game?edit_key={{g.key}}&delete=Y">delete</a></td>
     <td>{{ g.play_date }}</td>
