--- a/templates/play.html
+++ b/templates/play.html
@@ -52,38 +52,17 @@ table {
     <table style="border-width: 2px; border-style: solid; " id="scoreboard"> 
         <thead>
             <tr>
-                <th></th>
-                <th colspan="8" onclick="fnShowHide(0);" >Round 1</th>
-                <th colspan="2" onclick="fnShowHide(1);" >Pictures</th>
-                <th colspan="8" onclick="fnShowHide(2);" >Round 2</th>
-                <th colspan="2" onclick="fnShowHide(3);" >Person</th>
-                <th colspan="8" onclick="fnShowHide(4);" >Round 3</th>
-                <th colspan="2" onclick="fnShowHide(5);" >Picture Round 2</th>
-                <th colspan="8" onclick="fnShowHide(6);" >Round 4</th>
-                <th colspan="2" onclick="fnShowHide(7);" >Wager Round</th>
-            </tr>
-            <tr>
                 <th></th> 
-                <th colspan="2">Q1</th>
-                <th colspan="2">Q2</th>
-                <th colspan="2">Q3</th>
-                <th colspan="2">Q4</th>
+                {% for q in questions %}
+                    <th colspan="2">{{ q.question_text }}</th>
+                {% endfor %}
             </tr>
             <tr>
                 <th>Team</th>
-
-                <th>Y</th>
-                <th>N</th>
-
-                <th>Y</th>
-                <th>N</th>
-
-                <th>Y</th>
-                <th>N</th>
-
-                <th>Y</th>
-                <th>N</th>
-
+                {% for q in questions %}
+                    <th>Y</th>
+                    <th>N</th>
+                {% endfor %}
                 
             </tr>
         </thead> 
@@ -103,6 +82,10 @@ table {
             {% endfor %}
         </tbody>
     </table>
+    <input type="button" id="prev" name="prev" /><label for="prev">Previous Round</label>
+    <input type="button" id="next" name="next" /><label for="next">Previous Round</label>
 </form>
+
+{{ questions }}
 {% include "footer.html" %}
 
