--- a/templates/header.html
+++ b/templates/header.html
@@ -1,17 +1,6 @@
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css' />
-    <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-darkness/jquery-ui.css" rel="stylesheet" />
-    <link type="text/css" href="/js/jquery.dataTables.js" rel="stylesheet" />
-    <style>
-      body {
-      font-family: 'VT323', fixed;
-      font-size: 32px;
-      }
-      h1 {
-      font-size: 64px;
-      }
-    </style>
+    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css" />  
     <script type="text/javascript" 
 	    src="https://www.google.com/jsapi?key=ABQIAAAAiK6bysp9RRyERtJFRb0Q-xRcmr0PQADngRWMPS97XyQJoW_XeRTnXivT5evg7uSp24K2c7DkMkBYlw">
     </script>
@@ -19,8 +8,10 @@
 	    src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js">
     </script>
     <script type="text/javascript" 
-	    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js">
+	    src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js">
     </script>
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"> </script>
+    <script type="text/javascript" src="/js/FixedColumns.min.js"> </script>
   </head>
   <body>
     <h1>Nerd Pub Trivia!</h1>
