--- a/templates/play.html
+++ b/templates/play.html
@@ -1,13 +1,30 @@
 {% include "header.html" %}
 <script>
+    var lastBidCheckTime = 0;
     function secondsSinceEpochUTC() {
         dateObj = new Date();
-        return Math.floor(dateObj.getTime() / 1000) - (dateObj.getTimezoneOffset() * 60);
+        return Math.floor(dateObj.getTime() / 1000);
+    }
+
+    function getScores() {
+        var game_key = $('#leaderboard').attr("game_key");
+        $.getJSON('/admin/play/score?game=' + game_key, function(data) {
+                $.each(data, function(idx, val) {
+                        var targetNode = $('#leaderboard [team_name="' + idx +'"]');
+                        $(targetNode).children('.teamScore')[0].innerHTML = val;
+                        //
+
+                    });
+                
+            });
     }
 
     function getBids(since) {
         var game_key = $('#scoreboard').attr("game_key");
         $.getJSON('/admin/play/guess?game=' + game_key + '&changed_since=' + since, function(data) {
+                if (data.length != 0) {
+                    lastBidCheckTime = secondsSinceEpochUTC();
+                }
                 $.each(data, function(idx, val) {
                         var targetNode = $('[team_key="'  + data[idx].team_key + '"] [question_key="' + data[idx].question_key + '"]')[0];
                         $(targetNode).children('.wagerAmount')[0].value = data[idx].wager;
@@ -15,6 +32,16 @@
                     });
                 
             });
+    }
+
+    function refreshBids() {
+        getBids(lastBidCheckTime);
+        setTimeout(refreshBids, 20000);
+    }
+
+    function refreshScores() {
+        getScores();
+        setTimeout(refreshScores, 20000);
     }
 
     $(document).ready(function() {
@@ -26,6 +53,13 @@
             "aoColumnDefs": [ { "sWidth": "100px", "aTargets": ["questionColumn"] } ]
         });
         new FixedColumns( oTable, { "iLeftWidth": 150 } );
+
+        var scoreTable = $('#leaderboard').dataTable({
+            "sScrollX": "100%",
+            "bSort": false,
+            "bFilter": false,
+            "bScrollCollapse": true,
+        });
 
 
         $('.wagerInput').change(function(obj) {
@@ -43,7 +77,8 @@
 
         });
 
-        getBids(0); // get all the bids since forever, it's the first page load
+        refreshBids(); // get all the bids since forever, it's the first page load
+        refreshScores();
     });
 
 </script>
@@ -78,6 +113,24 @@
         </tbody>
     </table>
 </div>
+<br>
+
+<table border="0" cellpadding="0" cellspacing="0" id="leaderboard" game_key="{{game_key}}"> 
+        <thead>
+            <tr>
+                <th>Team</th> 
+                <th>Score</th>
+            </tr>
+        </thead> 
+    <tbody>
+        {% for t in teams %}
+            <tr team_name="{{t.team_name}}" >
+                <td>{{t.team_name}}</td>
+                <td class="teamScore">0</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
 {% include "footer.html" %}
 
