Start of answer management

--- a/templates/game.html
+++ b/templates/game.html
@@ -9,6 +9,7 @@
   <tr>
     <td>&nbsp;</td>
     <td><a href="/admin/play?game={{g.key}}">see game</a></td>
+    <td><a href="/admin/game/manage_questions?game={{g.key}}">manage questions for this game</a></td>
     <td><a href="/admin/game?edit_key={{g.key}}">edit</a></td>
     <td><a href="/admin/game?edit_key={{g.key}}&delete=Y">delete</a></td>
     <td>{{ g.play_date }}</td>
